Style fix in report table: right-align hours

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -156,6 +156,10 @@
 
 /* Special Fix for our report-table
  * ============================================== */
+    #report-table-container table tbody tr td:nth-child(2), #report-table-container table tbody tr td:nth-child(3) {
+        text-align: right;
+    }
+
     #report-table-container table tbody tr td:nth-child(4) {
         min-width: 140px;
     }
